fixed bug in the general.sass

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -64,7 +64,7 @@ header
         margin-top: 80px
         text-align: center
     @for $i from 1 through 2
-        &_#{$i}{z-index: 2+$i;
+        &_#{$i}{z-index: 2+$i
         +cont_parametrs
         @if $i==1 {animation-name: bounceInLeft}
         @if $i==2 {animation-name: bounceInRight}}
