--- a/sass/_articles.sass
+++ b/sass/_articles.sass
@@ -1,7 +1,7 @@
 .article
 	position: absolute
-	width: 840px
-	min-height: 470px
+	width: 971px
+	min-height: 320px
 	background-color: $bcg-color
 	box-shadow: 0 0 17px 7px #000
 	padding: 25px
@@ -17,8 +17,8 @@
 		+transform_active_no
 	&_list
 		position: absolute
-		width: 840px
-		min-height: 470px
+		width: 971px
+		min-height: 320px
 		background-color: $bcg-color
 		box-shadow: 0 0 17px 7px #000
 		padding: 25px
@@ -54,10 +54,10 @@
 		left: 0
 		bottom: 0
 		padding: 20px
-		width: 840px
+		width: 971px
 		a
 			color: $text-color
-	@for $i from 1 through 7
+	@for $i from 1 through $countarticle
 		&_img_#{$i}{position: relative
 		display: block
 		width: 313px
@@ -67,5 +67,5 @@
 	img
 		width: 100%
 		height: 100%
-	@for $i from 1 through 7
+	@for $i from 1 through $countarticle
 		&_text_#{$i}{position: relative}
