--- a/sass/_contactform.sass
+++ b/sass/_contactform.sass
@@ -9,7 +9,13 @@ h2
   margin-bottom: 10px
   font-size: 15pt
   text-align: center
-
+.cross
+  content: '\2718' 
+  color: #000
+  position: absolute
+  right: 240px
+  top: 40px
+  cursor: pointer
 .field-block
   margin-bottom: 10px
   label, .field, .select
@@ -42,16 +48,17 @@ h2
   font-size: 16px
   padding: 6px 12px
   margin-bottom: 5px
+  border-radius: 5px
 .loading
   display: none
   position: absolute
   top: 30px
-  left: 183px
-  width: 474px
+  left: 209px
+  width: 553px
   height: 538px
   border-radius: 4px
   background-color:  rgba(0,0,0,0.4)
   &_img
-    width: 40%
+    width: 50%
     height: 40%
     margin: 34% auto
