--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -1,5 +1,6 @@
 html, body,
 	height: 100%
+	background-image: $bcg-image
 *
 		box-sizing: border-box
 		margin: 0
@@ -14,11 +15,29 @@ html, body,
 	height: 100%
 	overflow: hidden
 	overflow-y: auto
-	background-image: $bcg-image
+	.loading_page
+		position: absolute
+		width: 100%
+		height: 100%
+		display: flex
+		justify-content: center
+		align-items: center
+		img
+			width: 90px
+			height: 90px
+		span
+			font-size: 17pt
+			color: #279be2
+			text-align: center
+			position: absolute
+			margin-top: 60px
 .content
 	width: 100%
+	display: flex
+	justify-content: center
 .container
 	&_general
+		z-index: 1
 		display: inline-block
 		width: 100%
 		margin-top: 20px
@@ -27,11 +46,11 @@ html, body,
 		@for $i from 1 through 6
 			&_#{$i}{opacity: 0
 			position: absolute
-			width: 840px
+			width: 971px
 			@if ($i != 4){background-color: $bcg-color
 			box-shadow: 0 0 17px 7px #000
 			padding: 25px
-			min-height: 470px}}
+			min-height: 250px}}
 		@for $i from 1 through 3
 			&_img_#{$i}{position: relative
 			display: block
@@ -44,11 +63,14 @@ html, body,
 			height: 100%
 		@for $i from 1 through 6
 			&_text_#{$i}{position: relative}
+		&_6
+			display: inline-table
 		&_5
 			display: flex
 			justify-content: flex-start
-			min-height: 275px
-			max-height: 250px
+			min-height: 300px
+			.box_shadow_1, .box_shadow_3
+				box-shadow: 0px 0px 15px 12px #000
 			@for $i from 1 through 3
 				.contact_#{$i}{display: flex
 				flex-direction: column
@@ -58,8 +80,9 @@ html, body,
 				width: 30%
 				position: relative
 				background-color: rgba(0,0,0,0.6)
+				margin-top: 20px
 				@if $i==1 {z-index: 18}
-				@if $i==3 {z-index: 18}
+				@if $i==3 {z-index: 19}
 				@if $i==2 {z-index: 17
 				width: 40%
 				background-color: rgba(0,0,0,0)
@@ -67,7 +90,7 @@ html, body,
 				.box_shadow_#{$i}
 					position: absolute
 					width: 100%
-					min-height: 100%
+					min-height: 100%}
 				.contact_2_logo
 					display: block
 					position: absolute
@@ -81,16 +104,15 @@ html, body,
 						font-size: 0pt
 						font-weight: bold
 						letter-spacing: -4px
-						opacity: 1}
-				img
-					width: 182px
-					@if $i==2 {width: 313px}
-					height: 200px
-					margin: auto
-				.social
-					flex-direction: column
-					padding-left: 20px
-				.social_items
+						opacity: 1
+			.social
+				flex-direction: column
+				width: 100%
+				&_group
+					width: 100%
+					&_items
+						padding-left: 35px
+				&_items, &_group_items
 					display: flex
 					justify-content: flex-start
 					align-items: center
@@ -99,21 +121,21 @@ html, body,
 					img
 						width: 30px
 						height: 30px
-						margin: 7px
-				a
-					display: inline-flex
-					flex-direction: row
-					justify-content: center
-					align-items: center
-					color: white
-					font-size: smaller
-					text-decoration: none
+						margin: 10px
+					a
+						display: inline-flex
+						flex-direction: row
+						justify-content: center
+						align-items: center
+						color: white
+						font-size: smaller
+						text-decoration: none
 		h3
 			text-align: center
 		p
 			display: inline-block
 			position: relative
-			margin: 2px 45px
+			margin: 2px auto
 			z-index: 25
 .container
 	&_general
@@ -126,7 +148,6 @@ html, body,
 					@if ($i != 5) {height: auto
 					+transform_active}
 					@if ($i == 5){transition: all 2s ease
-					margin-top: -20px
 					padding-top: 0px
 					.box_shadow_1
 						transition: box-shadow 1.5s ease 1.8s
@@ -146,10 +167,10 @@ html, body,
 					@if ($i == 5) {transition: all 2s ease 2s
 					.box_shadow_1
 						transition: box-shadow 1.5s ease 0.2s
-						box-shadow: 0px 0px 0px 0px rgba(58,158,255,0.9)
+						box-shadow: 0px 0px 15px 12px #000
 					.box_shadow_3
 						transition: box-shadow 1.5s ease 0.2s
-						box-shadow: 0px 0px 0px 0px rgba(255,86,81,0.9)
+						box-shadow: 0px 0px 15px 12px #000
 					.contact_2_logo
 						li
 							transition: all 2s ease	2s
@@ -167,11 +188,28 @@ html, body,
 	+movetoCnctRight
 @keyframes movefromContactRight
 	+movefromCnctRight
+@keyframes movetoContactLeftMobile
+	+movetoCnctLeftMobile
+@keyframes movefromContactLeftMobile
+	+movefromCnctLeftMobile
+@keyframes movetoContactRightMobile
+	+movetoCnctRightMobile
+@keyframes movefromContactRightMobile
+	+movefromCnctRightMobile
+@keyframes movetoContactLeftMobileSE
+	+movetoCnctLeftMobileSE
+@keyframes movefromContactLeftMobileSE
+	+movefromCnctLeftMobileSE
+@keyframes movetoContactRightMobileSE
+	+movetoCnctRightMobileSE
+@keyframes movefromContactRightMobileSE
+	+movefromCnctRightMobileSE
+
 @keyframes bounceInLeft
-		+bncInLeft
+	+bncInLeft
 @keyframes bounceInRight
-		+bncInRight
+	+bncInRight
 @keyframes rubberBand
-		+rbbrBand
+	+rbbrBand
 @keyframes bounceInUp
 	+bncInUp
