--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -81,6 +81,9 @@
 		align-items: center
 		width: 56%
 		z-index: 52
+		a
+			color: #fff
+			text-decoration: none
 	&_contacts
 		display: flex
 		justify-content: center
