--- a/sass/_articles.sass
+++ b/sass/_articles.sass
@@ -18,7 +18,6 @@
 	&_list
 		position: absolute
 		width: 971px
-		min-height: 320px
 		background-color: $bcg-color
 		box-shadow: 0 0 17px 7px #000
 		padding: 25px
@@ -26,7 +25,7 @@
 		&.active
 			z-index: 30
 			opacity: 1
-			height: auto
+			height: 100%
 			+transform_active
 		&.active_no
 			left: 0
