update main.js. Changed code structure

--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -24,6 +24,7 @@
 		border: 15px solid
 		border-color: #330867 transparent transparent #330867
 .footer
+	position: relative
 	width: 100%
 	height: 84px
 	background-image: $bcg-image
